Introduced IFetchHandler + DynamicDaemonFetchHandler implementation
Removed all the "fetch logic" from JetPeer and created a new interface - IFetchHandler - that is used by the peer instead.
The exisiting "fetch code" was moved to the DynamicDaemonFetchHandler implementation.

--- a/SharpJet/SharpJet.csproj
+++ b/SharpJet/SharpJet.csproj
@@ -65,6 +65,8 @@
       <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
     </Compile>
     <Compile Include="Utils\DisposableBase.cs" />
+    <Compile Include="Utils\DynamicDaemonFetchHandler.cs" />
+    <Compile Include="Utils\IFetchHandler.cs" />
     <Compile Include="Utils\ITimer.cs" />
     <Compile Include="Utils\IWebSocket.cs" />
     <Compile Include="Utils\TimerAdapter.cs">
