Additional unit tests for DynamicDaemonFetchHandler
Separate class for PathBuilder + interface IPathBuilder to be able to intercept calls.

--- a/SharpJet/SharpJet.csproj
+++ b/SharpJet/SharpJet.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Utils\DisposableBase.cs" />
     <Compile Include="Utils\DynamicDaemonFetchHandler.cs" />
     <Compile Include="Utils\IFetchHandler.cs" />
+    <Compile Include="Utils\IPathBuilder.cs" />
     <Compile Include="Utils\ITimer.cs" />
     <Compile Include="Utils\IWebSocket.cs" />
+    <Compile Include="Utils\PathBuilder.cs" />
     <Compile Include="Utils\TimerAdapter.cs">
       <SubType>Component</SubType>
     </Compile>
