Error handling for JetPeer / Status code
Implemented Error event for JetPeer. Users can subscribe to this event and handle occurring errors.
The SimpleFetchHandlers handles errors based on the event type, e.g. multiple add, change without add, etc.

--- a/SharpJet/SharpJet.csproj
+++ b/SharpJet/SharpJet.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionState.cs" />
+    <Compile Include="JetPeerErrorEventArgs.cs" />
     <Compile Include="JetPeerException.cs" />
     <Compile Include="JsonRpcException.cs" />
     <Compile Include="FetchId.cs">
